[gd_scene load_steps=20 format=2]

[ext_resource path="res://gui/huds/player-hud/assets/player-gui/Pixel Health Bar Asset Pack/Player GUI/healthbar_stamina_progress.png" type="Texture" id=1]
[ext_resource path="res://gui/huds/player-hud/assets/player-gui/Pixel Health Bar Asset Pack/Player GUI/healthbar_border.png" type="Texture" id=2]
[ext_resource path="res://gui/huds/player-hud/assets/player-gui/Pixel Health Bar Asset Pack/Player GUI/healthbar_health_progress.png" type="Texture" id=3]
[ext_resource path="res://gui/huds/player-hud/assets/player-gui/Pixel Health Bar Asset Pack/Player GUI/healtbar_special_progress.png" type="Texture" id=4]
[ext_resource path="res://characters/players/fire_man/assets/FiremanIconGUI.png" type="Texture" id=5]
[ext_resource path="res://gui/huds/pvp-hud/scripts/PvPGUI.gd" type="Script" id=6]
[ext_resource path="res://gui/huds/pause_menu/scenes/PauseMenuPvP.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/huds/you_died_screen/scenes/YouDiedPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://gui/MinimalPixel_v2.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://gui/huds/pvp_finish/scenes/FinishPanel.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.141176, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade-out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.498039 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_elemental_message"
length = 1.5

[sub_resource type="Animation" id=4]
resource_name = "show_manna_message"
length = 1.5
loop = true

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.141176, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade-out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.498039 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "show_elemental_message"
length = 1.5

[sub_resource type="Animation" id=8]
resource_name = "show_manna_message"
length = 1.5
loop = true

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 9 )

[node name="PvP_GUI" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="PInfoControl" type="Control" parent="."]
margin_left = 9.0
margin_top = -55.0
margin_right = 49.0
margin_bottom = -15.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="P2BarControl" type="Control" parent="PInfoControl"]
margin_left = 920.0
margin_top = 50.0
margin_right = 960.0
margin_bottom = 89.9997
rect_scale = Vector2( -1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="P2HealthBar" type="TextureProgress" parent="PInfoControl/P2BarControl"]
margin_left = 41.0
margin_top = 10.0
margin_right = 124.0
margin_bottom = 21.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="P2SpecialBar" type="TextureProgress" parent="PInfoControl/P2BarControl"]
margin_left = 41.0
margin_top = 25.0
margin_right = 124.0
margin_bottom = 36.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="P2ElementalBar" type="TextureProgress" parent="PInfoControl/P2BarControl"]
margin_left = 41.0
margin_top = 40.0
margin_right = 124.0
margin_bottom = 51.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="P2PlayerIcon" type="TextureRect" parent="PInfoControl/P2BarControl"]
margin_right = 96.0
margin_bottom = 102.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="P1BarControl" type="Control" parent="PInfoControl"]
margin_left = 10.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 89.9997
__meta__ = {
"_edit_group_": true
}

[node name="P1HealthBar" type="TextureProgress" parent="PInfoControl/P1BarControl"]
margin_left = 41.0
margin_top = 10.0
margin_right = 124.0
margin_bottom = 21.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="P1SpecialBar" type="TextureProgress" parent="PInfoControl/P1BarControl"]
margin_left = 41.0
margin_top = 25.0
margin_right = 124.0
margin_bottom = 36.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="P1ElementalBar" type="TextureProgress" parent="PInfoControl/P1BarControl"]
margin_left = 41.0
margin_top = 40.0
margin_right = 124.0
margin_bottom = 51.0
rect_scale = Vector2( 3, 1.5 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="P1PlayerIcon" type="TextureRect" parent="PInfoControl/P1BarControl"]
margin_right = 96.0
margin_bottom = 102.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="YouDiedScreen" parent="PInfoControl" instance=ExtResource( 8 )]
visible = false

[node name="Animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade-out = SubResource( 2 )
anims/show_elemental_message = SubResource( 3 )
anims/show_manna_message = SubResource( 4 )

[node name="MessageAnimator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/fade-out = SubResource( 6 )
anims/show_elemental_message = SubResource( 7 )
anims/show_manna_message = SubResource( 8 )

[node name="GameOverBackground" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = -1.0
margin_top = 3.0
margin_right = 1919.0
margin_bottom = 1083.0
color = Color( 0.141176, 0.12549, 0.12549, 1 )

[node name="Sounds" type="Node" parent="."]

[node name="GameOver" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="PlayerMessagesControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PlayerMannaMessage" type="Label" parent="PlayerMessagesControl"]
modulate = Color( 0, 0, 0, 0 )
margin_left = 611.0
margin_top = 200.0
margin_right = 1297.0
margin_bottom = 283.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Player message goes here!"
align = 1
valign = 1

[node name="PlayerElementalMessage" type="Label" parent="PlayerMessagesControl"]
modulate = Color( 0, 0, 0, 0 )
margin_left = 611.0
margin_top = 200.0
margin_right = 1297.0
margin_bottom = 283.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Player message goes here!"
align = 1
valign = 1

[node name="Sounds2" type="Node" parent="."]

[node name="GameOver" type="AudioStreamPlayer2D" parent="Sounds2"]

[node name="FinishPanel" parent="." instance=ExtResource( 10 )]
visible = false

[node name="PauseMenuPvP" parent="." instance=ExtResource( 7 )]

[connection signal="value_changed" from="PInfoControl/P2BarControl/P2HealthBar" to="." method="_on_P2HealthBar_value_changed"]
[connection signal="value_changed" from="PInfoControl/P2BarControl/P2SpecialBar" to="." method="_on_P2SpecialBar_value_changed"]
[connection signal="value_changed" from="PInfoControl/P2BarControl/P2ElementalBar" to="." method="_on_P2ElementalBar_value_changed"]
[connection signal="value_changed" from="PInfoControl/P1BarControl/P1HealthBar" to="." method="_on_P1HealthBar_value_changed"]
[connection signal="value_changed" from="PInfoControl/P1BarControl/P1SpecialBar" to="." method="_on_P1SpecialBar_value_changed"]
[connection signal="value_changed" from="PInfoControl/P1BarControl/P1ElementalBar" to="." method="_on_P1ElementalBar_value_changed"]
[connection signal="animation_finished" from="Animator" to="." method="_on_Animator_animation_finished"]
